tests/snapshots/end2end__end2end_horizontal_remove.snap
---
source: tests/end2end.rs
expression: frames.try_iter().last().unwrap()
---
captured piece:
x01234567890123456789012345678901234567890123456789012345678901234567890123456789x
0Left                                    │Right                                  |
1                                        │                                       |
2                                        │                                       |
3                                        │                                       |
4                                        │                                       |
5                                        │                                       |
6                                        │                                       |
7                                        │                                       |
8                                        │                                       |
9                                        │                                       |
0                                        │                                       |
1                                        │                                       |
2                                        │                                       |
3                                        │                                       |
4                                        │                                       |
5                                        │                                       |
6                                        │                                       |
7                                        │                                       |
8                                        │                                       |
9                                        │                                       |
0                                        │                                       |
1                                        │                                       |
2                                        │                                       |
3                                        │                                       |
x--------------------------------------------------------------------------------x

